# local-llm-rag-hr-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: api.py  chunking.py  config.py  gen_suggestions.py  ingest.py  lexical.py  llm.py  rag.py  retrieval.py  schemas.py  suggestions.py
backend/app/prompts/: answer_tr.txt  suggest_tr.txt  system_tr.txt
backend/bench/: calibrate_threshold.py  eval_retrieval.py  prompts.yaml  questions.py  run_bench.py
backend/bench/results/: retrieval-baseline.json  retrieval-hybrid.json  run10-repeat.json  run11-think.json  run3-memory-pressure.json  run4-clean.json  run5-reversed.json  run6-repeat.json  run7-think.json  run8-clean.json  run9-reversed.json
backend/tests/: test_api_stream.py  test_chunking.py  test_gen_suggestions.py  test_ingest.py  test_lexical.py  test_llm_errors.py  test_retrieval.py  test_scoring.py  test_suggestions.py
data/: suggested-questions.yaml
data/kb/: 01-izin-politikasi.md  02-calisma-duzeni.md  03-masraf-ve-yan-haklar.md  04-ise-giris-ve-oryantasyon.md
docs/: arastirma-raporu.md  proje-raporu.md
docs/slides/: index.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: theme-init.js
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: BenchmarkPanel.tsx  BorderGlow.tsx  ChatPanel.test.tsx  (+12 more)
scripts/: dev.bat  dev.sh
(+6 files in other folders)
